syntax = "proto3";

package user_service;

// 用户服务定义
service UserService {
    // 创建用户
    rpc CreateUser(CreateUserRequest) returns (User);
    
    // 获取用户
    rpc GetUser(GetUserRequest) returns (User);
    
    // 更新用户
    rpc UpdateUser(UpdateUserRequest) returns (User);
    
    // 删除用户
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    
    // 列出用户
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
    
    // 健康检查
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// 请求和响应消息定义
message CreateUserRequest {
    string name = 1;
    string email = 2;
}

message GetUserRequest {
    string id = 1;
}

message UpdateUserRequest {
    string id = 1;
    optional string name = 2;
    optional string email = 3;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    bool success = 1;
    string message = 2;
}

message ListUsersRequest {
    uint32 page = 1;
    uint32 page_size = 2;
}

message ListUsersResponse {
    repeated User users = 1;
    uint32 total = 2;
    uint32 page = 3;
    uint32 page_size = 4;
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    uint64 created_at = 4;
}

message HealthCheckRequest {
    string service = 1;
}

message HealthCheckResponse {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
    }
    ServingStatus status = 1;
    string message = 2;
}
