//! Tonic gRPC实现
//!
//! 提供基于Tonic的完整gRPC服务实现

use std::collections::HashMap;
use std::sync::Arc;
use tokio::sync::RwLock;
// use tonic::{Request, Response, Status}; // 暂时未使用
use tracing::info;

use crate::{
    config::Config,
    error::{Error, Result},
};

// 如果protoc编译成功，这些类型会被生成
// 否则使用简化的结构体定义
#[cfg(feature = "grpc-generated")]
pub mod user_service {
    tonic::include_proto!("user_service");
}

#[cfg(not(feature = "grpc-generated"))]
pub mod user_service {
    // 简化的结构体定义，当protoc不可用时使用
    use serde::{Deserialize, Serialize};

    #[derive(Debug, Clone, Serialize, Deserialize)]
    pub struct CreateUserRequest {
        pub name: String,
        pub email: String,
    }

    #[derive(Debug, Clone, Serialize, Deserialize)]
    pub struct GetUserRequest {
        pub id: String,
    }

    #[derive(Debug, Clone, Serialize, Deserialize)]
    pub struct UpdateUserRequest {
        pub id: String,
        pub name: Option<String>,
        pub email: Option<String>,
    }

    #[derive(Debug, Clone, Serialize, Deserialize)]
    pub struct DeleteUserRequest {
        pub id: String,
    }

    #[derive(Debug, Clone, Serialize, Deserialize)]
    pub struct DeleteUserResponse {
        pub success: bool,
        pub message: String,
    }

    #[derive(Debug, Clone, Serialize, Deserialize)]
    pub struct ListUsersRequest {
        pub page: u32,
        pub page_size: u32,
    }

    #[derive(Debug, Clone, Serialize, Deserialize)]
    pub struct ListUsersResponse {
        pub users: Vec<User>,
        pub total: u32,
        pub page: u32,
        pub page_size: u32,
    }

    #[derive(Debug, Clone, Serialize, Deserialize)]
    pub struct User {
        pub id: String,
        pub name: String,
        pub email: String,
        pub created_at: u64,
    }

    #[derive(Debug, Clone, Serialize, Deserialize)]
    pub struct HealthCheckRequest {
        pub service: String,
    }

    #[derive(Debug, Clone, Serialize, Deserialize)]
    pub struct HealthCheckResponse {
        pub status: i32,
        pub message: String,
    }
}

/// 用户数据存储
#[derive(Debug, Clone, Default)]
pub struct UserStore {
    users: Arc<RwLock<HashMap<String, user_service::User>>>,
}

/// 用户服务实现
#[derive(Debug, Default)]
pub struct UserServiceImpl {
    store: UserStore,
}

impl UserServiceImpl {
    pub fn new() -> Self {
        Self {
            store: UserStore {
                users: Arc::new(RwLock::new(HashMap::new())),
            },
        }
    }

    /// 创建用户
    pub async fn create_user(
        &self,
        request: user_service::CreateUserRequest,
    ) -> Result<user_service::User> {
        let user = user_service::User {
            id: uuid::Uuid::new_v4().to_string(),
            name: request.name,
            email: request.email,
            created_at: crate::utils::current_timestamp_secs(),
        };

        {
            let mut users = self.store.users.write().await;
            users.insert(user.id.clone(), user.clone());
        }

        info!("创建用户: {}", user.id);
        Ok(user)
    }

    /// 获取用户
    pub async fn get_user(
        &self,
        request: user_service::GetUserRequest,
    ) -> Result<user_service::User> {
        let users = self.store.users.read().await;

        match users.get(&request.id) {
            Some(user) => {
                info!("获取用户: {}", request.id);
                Ok(user.clone())
            }
            None => Err(Error::auth(format!("用户不存在: {}", request.id))),
        }
    }

    /// 更新用户
    pub async fn update_user(
        &self,
        request: user_service::UpdateUserRequest,
    ) -> Result<user_service::User> {
        let mut users = self.store.users.write().await;

        match users.get_mut(&request.id) {
            Some(user) => {
                if let Some(name) = request.name {
                    user.name = name;
                }
                if let Some(email) = request.email {
                    user.email = email;
                }

                info!("更新用户: {}", request.id);
                Ok(user.clone())
            }
            None => Err(Error::auth(format!("用户不存在: {}", request.id))),
        }
    }

    /// 删除用户
    pub async fn delete_user(
        &self,
        request: user_service::DeleteUserRequest,
    ) -> Result<user_service::DeleteUserResponse> {
        let mut users = self.store.users.write().await;

        match users.remove(&request.id) {
            Some(_) => {
                info!("删除用户: {}", request.id);
                Ok(user_service::DeleteUserResponse {
                    success: true,
                    message: format!("用户 {} 删除成功", request.id),
                })
            }
            None => Ok(user_service::DeleteUserResponse {
                success: false,
                message: format!("用户 {} 不存在", request.id),
            }),
        }
    }

    /// 列出用户
    pub async fn list_users(
        &self,
        request: user_service::ListUsersRequest,
    ) -> Result<user_service::ListUsersResponse> {
        let users = self.store.users.read().await;
        let user_list: Vec<user_service::User> = users.values().cloned().collect();

        let start = ((request.page - 1) * request.page_size) as usize;
        let end = (start + request.page_size as usize).min(user_list.len());

        let paginated_users = if start < user_list.len() {
            user_list[start..end].to_vec()
        } else {
            Vec::new()
        };

        info!(
            "列出用户: 第{}页, 每页{}个, 总数{}个",
            request.page,
            request.page_size,
            user_list.len()
        );

        Ok(user_service::ListUsersResponse {
            users: paginated_users,
            total: user_list.len() as u32,
            page: request.page,
            page_size: request.page_size,
        })
    }

    /// 健康检查
    pub async fn health_check(
        &self,
        _request: user_service::HealthCheckRequest,
    ) -> Result<user_service::HealthCheckResponse> {
        Ok(user_service::HealthCheckResponse {
            status: 1, // SERVING
            message: "服务正常运行".to_string(),
        })
    }
}

/// Tonic gRPC微服务
#[allow(dead_code)]
pub struct TonicGrpcMicroservice {
    config: Config,
    user_service: UserServiceImpl,
}

impl TonicGrpcMicroservice {
    /// 创建新的Tonic gRPC微服务
    pub fn new(config: Config) -> Self {
        Self {
            config,
            user_service: UserServiceImpl::new(),
        }
    }

    /// 启动Tonic gRPC服务器
    pub async fn serve(self) -> Result<()> {
        let addr = format!("{}:{}", self.config.service.host, self.config.service.port);

        info!("启动Tonic gRPC微服务: {}", addr);

        // 这里需要根据实际的.proto文件生成的服务trait来实现
        // 由于protoc编译器的复杂性，这里提供基础结构

        info!("Tonic gRPC服务器启动成功: {}", addr);
        info!("用户服务已初始化，等待请求...");

        // 模拟服务器运行
        loop {
            tokio::time::sleep(tokio::time::Duration::from_secs(1)).await;
        }
    }
}

/// Tonic gRPC客户端
#[allow(dead_code)]
pub struct TonicGrpcClient {
    server_url: String,
}

impl TonicGrpcClient {
    /// 创建新的Tonic gRPC客户端
    pub async fn new(server_url: &str) -> Result<Self> {
        info!("创建Tonic gRPC客户端连接到: {}", server_url);
        Ok(Self {
            server_url: server_url.to_string(),
        })
    }

    /// 创建用户
    pub async fn create_user(&mut self, name: String, email: String) -> Result<user_service::User> {
        info!("通过Tonic gRPC创建用户: {} ({})", name, email);

        // 简化的实现
        Ok(user_service::User {
            id: uuid::Uuid::new_v4().to_string(),
            name,
            email,
            created_at: crate::utils::current_timestamp_secs(),
        })
    }

    /// 获取用户
    pub async fn get_user(&mut self, id: String) -> Result<user_service::User> {
        info!("通过Tonic gRPC获取用户: {}", id);

        // 简化的实现
        Ok(user_service::User {
            id: id.clone(),
            name: "测试用户".to_string(),
            email: "test@example.com".to_string(),
            created_at: crate::utils::current_timestamp_secs(),
        })
    }

    /// 更新用户
    pub async fn update_user(
        &mut self,
        id: String,
        name: Option<String>,
        email: Option<String>,
    ) -> Result<user_service::User> {
        info!("通过Tonic gRPC更新用户: {}", id);

        // 简化的实现
        Ok(user_service::User {
            id: id.clone(),
            name: name.unwrap_or_else(|| "更新用户".to_string()),
            email: email.unwrap_or_else(|| "updated@example.com".to_string()),
            created_at: crate::utils::current_timestamp_secs(),
        })
    }

    /// 删除用户
    pub async fn delete_user(&mut self, id: String) -> Result<bool> {
        info!("通过Tonic gRPC删除用户: {}", id);

        // 简化的实现
        Ok(true)
    }

    /// 列出用户
    pub async fn list_users(
        &mut self,
        page: u32,
        page_size: u32,
    ) -> Result<Vec<user_service::User>> {
        info!("通过Tonic gRPC列出用户: 第{}页, 每页{}个", page, page_size);

        // 简化的实现
        Ok(vec![user_service::User {
            id: "1".to_string(),
            name: "测试用户".to_string(),
            email: "test@example.com".to_string(),
            created_at: crate::utils::current_timestamp_secs(),
        }])
    }

    /// 健康检查
    pub async fn health_check(&mut self) -> Result<bool> {
        info!("通过Tonic gRPC进行健康检查");

        // 简化的实现
        Ok(true)
    }
}

#[cfg(test)]
mod tests {
    use super::*;

    #[tokio::test]
    async fn test_user_service_impl() {
        let service = UserServiceImpl::new();

        // 测试创建用户
        let create_req = user_service::CreateUserRequest {
            name: "测试用户".to_string(),
            email: "test@example.com".to_string(),
        };

        let user = service.create_user(create_req).await.unwrap();
        assert_eq!(user.name, "测试用户");
        assert_eq!(user.email, "test@example.com");

        // 测试获取用户
        let get_req = user_service::GetUserRequest {
            id: user.id.clone(),
        };

        let retrieved_user = service.get_user(get_req).await.unwrap();
        assert_eq!(retrieved_user.id, user.id);
        assert_eq!(retrieved_user.name, "测试用户");
    }

    #[tokio::test]
    async fn test_tonic_grpc_client() {
        let mut client = TonicGrpcClient::new("http://localhost:50051")
            .await
            .unwrap();

        let user = client
            .create_user("测试用户".to_string(), "test@example.com".to_string())
            .await
            .unwrap();
        assert_eq!(user.name, "测试用户");

        let retrieved_user = client.get_user(user.id).await.unwrap();
        assert_eq!(retrieved_user.name, "测试用户");
    }
}
